# DG_moments_deal

./: CMakeCache.txt  CMakeLists.txt  Guidlines_new_geometry  Makefile  Parameters.txt  cmake_install.cmake  guidlines_new_dimension  input.in  job.bsb  main.cc  mycode  mycode.out  output1  output4  output_R13  output_manuel  output_meshworker  output_trial  stdout.txt  system_matrix  testing  testing.cc
1D_moments/: Makefile  (+4 more)
Tests/: ._InvProjector_Data.h  ._Projector_Data.h  ._main.cc  CMakeLists.txt  Guidelines_NewSystem  InvProjector_Data.h  Makefile  Projector_Data.h  Test_LinearSolver.h  Test_ProjectorData.h  cmake_install.cmake  main.cc
Tests/Test_Eigen/: Test_Eigen  Test_Eigen.cc  run.sh
Tests/Test_Generic/: Test_Assembly.h  Test_Assembly_MAdaptive.h  Test_BCrhs.h  Test_FEValues.h  Test_LinearSolver.h  Test_MatrixOpt.h  Test_MemoryAllocation.h  Test_MeshGenerator.h  Test_Projection.h  Test_ProjectorData.h  Test_ResidualCompution.h  Test_Run.h  Test_Solver_Generic.h  Test_Solver_m_adaptive.h  Test_SymmetrizerData.h  Test_VertexDof.h  basic_routines.h  global_matrix_1D_poisson_madaptive.h  global_matrix_G20_square_inflow_outflow.h
Tests/Test_Reports/: G105_Kn0p1_Char_SingleCore.xml  G105_Kn0p1_Odd_SingleCore.xml  G105_Kn0p3_Char_SingleCore.xml  G105_Kn0p3_Odd_SingleCore.xml  G105_Production_MM_SingleCore.xml  G120_Production_MM_SingleCore.xml  G20_Kn0p1_Char_SingleCore.xml  G20_Kn0p1_Odd_MultiCore.xml  G20_Kn0p1_Odd_SingleCore.xml  G20_Kn0p3_Char_MultiCore.xml  G20_Kn0p3_Char_SingleCore.xml  G20_Kn0p3_Odd_MultiCore.xml  G20_Kn0p3_Odd_SingleCore.xml  G20_Production_MM_SingleCore.xml  G26_Kn0p1_Char_MultiCore.xml  G26_Kn0p1_Char_SingleCore.xml  G26_Kn0p1_Odd_MultiCore.xml  G26_Kn0p1_Odd_SingleCore.xml  G26_Kn0p3_Char_MultiCore.xml  G26_Kn0p3_Char_SingleCore.xml  G26_Kn0p3_Odd_MultiCore.xml  G26_Kn0p3_Odd_SingleCore.xml  G26_Production_MM_SingleCore.xml  G35_Kn0p1_Char_SingleCore.xml  G35_Kn0p1_Odd_SingleCore.xml  G35_Kn0p3_Char_SingleCore.xml  G35_Kn0p3_Odd_SingleCore.xml  G35_Production_MM_SingleCore.xml  G45_Kn0p1_Char_SingleCore.xml  G45_Kn0p1_Odd_SingleCore.xml  G45_Kn0p3_Char_SingleCore.xml  G45_Kn0p3_Odd_SingleCore.xml  G45_Production_MM_SingleCore.xml  G56_Kn0p1_Char_SingleCore.xml  G56_Kn0p1_Odd_SingleCore.xml  G56_Kn0p3_Char_SingleCore.xml  G56_Kn0p3_Odd_SingleCore.xml  G56_Production_MM_SingleCore.xml  G71_Kn0p1_Char_SingleCore.xml  G71_Kn0p1_Odd_SingleCore.xml  (+17 more)
Tests/include/: Test_BaseConstants.h  Test_BoundaryHandler_Char.h  Test_BoundaryHandler_Odd.h  Test_EquationGenerator.h  Test_ExactSolution.h  Test_ForceType.h  Test_MatrixOpt.h  Test_Solver.h  Test_TensorInfo.h  basic_routines.h  develop_Aminus.h
Tests/include_tests_G105/: Test_ExactSolution.h  Test_Production.h  Test_Solver.h
Tests/include_tests_G120/: Test_ExactSolution.h  Test_Production.h  Test_Solver.h
Tests/include_tests_G20/: Test_BoundaryHandler_Odd.h  Test_CrsFormat.h  Test_EquationGenerator.h  Test_ExactSolution.h  Test_Production.h  Test_Solver.h  Test_SquareGrid.h  basic_routines.h
Tests/include_tests_G26/: ;  PoissonHeatError.h  Test_BaseConstants.h  Test_BoundaryHandler_Odd.h  Test_EquationGenerator.h  Test_ExactSolution.h  Test_ForceType.h  Test_MatrixOpt.h  Test_Production.h  Test_Solver.h  Test_TensorInfo.h  basic_routines.h  develop_Aminus.h  parse_command_line.h
Tests/include_tests_G35/: Test_ExactSolution.h  Test_Production.h  Test_Solver.h
Tests/include_tests_G45/: Test_ExactSolution.h  Test_Production.h  Test_Solver.h
Tests/include_tests_G56/: Test_BoundaryHandler_Char.h  Test_EquationGenerator.h  Test_ExactSolution.h  Test_ForceType.h  Test_MatrixOpt.h  Test_Production.h  Test_Solver.h  Test_TensorInfo.h  Things which could be faulty:
Tests/include_tests_G71/: Test_ExactSolution.h  Test_Production.h  Test_Solver.h
Tests/include_tests_G84/: Test_ExactSolution.h  Test_Production.h  Test_Solver.h
Tests/include_tests_systemA/: Test_BaseConstants.h  Test_BoundaryHandler_Char.h  Test_BoundaryHandler_Odd.h  Test_EquationGenerator.h  Test_ExactSolution.h  Test_ForceType.h  Test_MatrixOpt.h  Test_PostProc.h  Test_Solver.h  Test_TensorInfo.h  compute_error.h  develop_Aminus.h
Tests/system_matrices/: A1_1D_15.txt  A1_1D_16.txt  A1_1D_18.txt  A1_1D_21.txt  A1_1D_25.txt  A1_1D_29.txt  A1_1D_33.txt  A1_1D_39.txt  A1_1D_41.txt  A1_1D_45.txt  A1_1D_47.txt  A1_1D_49.txt  A1_1D_5.txt  A1_1D_7.txt  A1_1D_8.txt  A1_1D_80.txt  A1_1D_9.txt  A1_28.txt  A1_2D_22.txt  A1_2D_34.txt  A1_2D_50.txt  A1_3D_105.txt  A1_3D_13.txt  A1_3D_20.txt  A1_3D_35.txt  A1_3D_45.txt  A1_3D_71.txt  A1_3D_84.txt  A1_4.txt  A1_62.txt  A1_7.txt  A1_9.txt  A2_17.txt  A2_22.txt  A2_28.txt  A2_2D_13.txt  A2_2D_70.txt  A2_3D_105.txt  A2_3D_13.txt  A2_3D_84.txt  (+153 more)
Tests/system_matrices/monotone_systems/: A1_2D_10Trun.txt  A1_2D_182Trun.txt  A1_2D_280Trun.txt  A1_2D_28Trun.txt  A1_2D_408Trun.txt  A1_2D_40Trun.txt  A1_2D_480Trun.txt  A1_2D_80Trun.txt  Amod1_2D_110Trun.txt  Amod1_2D_140Trun.txt  Amod1_2D_16Trun.txt  Amod1_2D_182Trun.txt  Amod1_2D_224Trun.txt  Amod1_2D_40Trun.txt  Amod1_2D_480Trun.txt  Amod1_2D_80Trun.txt  BGK_P_2D_10Trun.txt  BGK_P_2D_110Trun.txt  BGK_P_2D_140Trun.txt  BGK_P_2D_280Trun.txt  BGK_P_2D_336Trun.txt  BGK_P_2D_408Trun.txt  BGK_P_2D_40Trun.txt  BGK_P_2D_480Trun.txt  BGK_P_2D_570Trun.txt  BGK_P_2D_660Trun.txt  BGK_P_2D_880Trun.txt  B_2D_10Trun.txt  B_2D_140Trun.txt  B_2D_16Trun.txt  B_2D_224Trun.txt  B_2D_28Trun.txt  B_2D_480Trun.txt  B_2D_570Trun.txt  B_2D_60Trun.txt  B_2D_880Trun.txt  Sigma_2D_10Trun.txt  Sigma_2D_28Trun.txt  Sigma_2D_336Trun.txt  Sigma_2D_60Trun.txt  (+11 more)
Tests/test_1D_heat_conduction/G20/: input_G20_1D_heat_conduction_odd_Kn0p1.in
Tests/test_1D_heat_conduction/G26/: input_G26_1D_heat_conduction_odd_Kn0p1.in
Tests/test_1D_heat_conduction/G35/: input_G35_1D_heat_conduction_odd_Kn0p1.in
Tests/test_1D_heat_conduction/G45/: input_G45_1D_heat_conduction_odd_Kn0p1.in
Tests/test_faster_code/: input_systemA_ring_char_meshworker_Kn0p1.in
Tests/test_file_reading/: input_G20.in  input_poisson_heat.in
Tests/test_input_files/: input1.in  input_systemA_ring_unsymm_char.in
(+2121 files in other folders)
